crates/nyx-lexer/tests/snapshots/integration_tests__integration__all_features.snap
---
source: crates/nyx-lexer/tests/integration_tests.rs
expression: tokens
---
- Newline
- Using
- Std
- Colon
- Colon
- Ident: io
- Newline
- Using
- Core
- Colon
- Colon
- Ident: mem
- Newline
- Newline
- Hash
- Ident: repr
- LParen
- Ident: C
- RParen
- Newline
- Export
- Struct
- Ident: Config
- Newline
- Indent
- Ident: debug
- Colon
- Bool
- Newline
- Ident: max_connections
- Colon
- U32
- Newline
- Ident: port
- Colon
- U16
- Newline
- Ident: host
- Colon
- LBracket
- U8
- RBracket
- Newline
- Newline
- Dedent
- Struct
- Ident: Pool
- LBracket
- Ident: T
- RBracket
- Newline
- Indent
- Where
- Newline
- Indent
- Ident: T
- Colon
- Ident: Sized
- Newline
- Dedent
- Ident: items
- Colon
- Star
- Mut
- Ident: T
- Newline
- Ident: count
- Colon
- USize
- Newline
- Ident: capacity
- Colon
- USize
- Newline
- Newline
- Dedent
- Enum
- LBracket
- U8
- RBracket
- Ident: Status
- Newline
- Indent
- Ident: IDLE
- Eq
- IntegerLiteral:
    base: Decimal
    digits: "0"
    suffix: ~
- Newline
- Ident: RUNNING
- Eq
- IntegerLiteral:
    base: Decimal
    digits: "1"
    suffix: ~
- Newline
- Ident: STOPPED
- Eq
- IntegerLiteral:
    base: Decimal
    digits: "2"
    suffix: ~
- Newline
- Ident: ERROR
- Eq
- IntegerLiteral:
    base: Decimal
    digits: "255"
    suffix: ~
- Newline
- Newline
- Dedent
- Union
- Ident: MaybeError
- LBracket
- Ident: T
- RBracket
- Newline
- Indent
- Ident: value
- Colon
- Ident: T
- Newline
- Ident: error
- Colon
- LBracket
- U8
- RBracket
- Newline
- Newline
- Dedent
- Interface
- Ident: Lifecycle
- Newline
- Indent
- Func
- Bang
- Ident: start
- LParen
- Star
- Mut
- SelfLower
- RParen
- Arrow
- OkLiteral
- Newline
- Func
- Bang
- Ident: stop
- LParen
- Star
- Mut
- SelfLower
- RParen
- Arrow
- OkLiteral
- Newline
- Func
- Ident: is_running
- LParen
- Star
- SelfLower
- RParen
- Arrow
- Bool
- Newline
- Newline
- Dedent
- Public
- Func
- Bang
- Ident: run
- LBracket
- Ident: T
- RBracket
- LParen
- Ident: pool
- Colon
- Star
- Mut
- Ident: Pool
- LBracket
- Ident: T
- RBracket
- Comma
- Ident: config
- Colon
- Star
- Ident: Config
- RParen
- Arrow
- Ident: MaybeError
- LBracket
- OkLiteral
- RBracket
- Newline
- Indent
- Where
- Newline
- Indent
- Ident: T
- Colon
- Ident: Lifecycle
- Newline
- Dedent
- If
- Ident: config
- Dot
- Ident: debug
- Newline
- Indent
- Pass
- Newline
- Dedent
- For
- Ident: i
- In
- Ident: range
- LParen
- IntegerLiteral:
    base: Decimal
    digits: "0"
    suffix: ~
- Comma
- Ident: config
- Dot
- Ident: max_connections
- As
- USize
- RParen
- Newline
- Indent
- Pass
- Newline
- Dedent
- Pass
- Newline
- Dedent
