crates/nyx-lexer/tests/snapshots/integration_tests__integration__seq_dynamic_array.snap
---
source: crates/nyx-lexer/tests/integration_tests.rs
expression: tokens
---
- Newline
- Using
- Core
- Colon
- Colon
- Ident: memory
- Newline
- Struct
- Ident: SeqBuffer
- LBracket
- Ident: T
- RBracket
- Newline
- Indent
- Ident: ptr
- Colon
- Star
- Mut
- Ident: T
- Newline
- Ident: cap
- Colon
- USize
- Newline
- Ident: len
- Colon
- USize
- Newline
- Dedent
- Export
- Struct
- Ident: Seq
- LBracket
- Ident: T
- RBracket
- Newline
- Indent
- Ident: buffer
- Colon
- Ident: SeqBuffer
- LBracket
- Ident: T
- RBracket
- Newline
- Dedent
- Const
- LBracket
- Ident: T
- RBracket
- Ident: Seq
- LBracket
- Ident: T
- RBracket
- Colon
- Colon
- Ident: DEFAULT_CAPACITY
- Colon
- USize
- Eq
- IntegerLiteral:
    base: Decimal
    digits: "4"
    suffix: ~
- Newline
- Const
- LBracket
- Ident: T
- RBracket
- Ident: Seq
- LBracket
- Ident: T
- RBracket
- Colon
- Colon
- Ident: GROW_FACTOR
- Colon
- USize
- Eq
- IntegerLiteral:
    base: Decimal
    digits: "2"
    suffix: ~
- Newline
- Export
- Func
- Bang
- Ident: Seq
- LBracket
- Ident: T
- RBracket
- Colon
- Colon
- Ident: new
- LParen
- RParen
- Arrow
- Ident: Seq
- LBracket
- Ident: T
- RBracket
- Newline
- Indent
- Pass
- Newline
- Dedent
- Export
- Func
- Ident: Seq
- LBracket
- Ident: T
- RBracket
- Colon
- Colon
- Ident: len
- LParen
- Star
- SelfLower
- RParen
- Arrow
- USize
- Newline
- Indent
- Return
- SelfLower
- Dot
- Ident: buffer
- Dot
- Ident: len
- Newline
- Dedent
- Export
- Func
- Ident: Seq
- LBracket
- Ident: T
- RBracket
- Colon
- Colon
- Ident: is_empty
- LParen
- Star
- SelfLower
- RParen
- Arrow
- Bool
- Newline
- Indent
- Return
- SelfLower
- Dot
- Ident: buffer
- Dot
- Ident: len
- EqEq
- IntegerLiteral:
    base: Decimal
    digits: "0"
    suffix: ~
- Newline
- Dedent
- Export
- Func
- Ident: Seq
- LBracket
- Ident: T
- RBracket
- Colon
- Colon
- Ident: cap
- LParen
- Star
- SelfLower
- RParen
- Arrow
- USize
- Newline
- Indent
- Return
- SelfLower
- Dot
- Ident: buffer
- Dot
- Ident: cap
- Newline
- Dedent
- Export
- Func
- Ident: Seq
- LBracket
- Ident: T
- RBracket
- Colon
- Colon
- Ident: get
- LParen
- Star
- SelfLower
- Comma
- Ident: index
- Colon
- USize
- RParen
- Arrow
- Question
- Star
- Ident: T
- Newline
- Indent
- If
- Ident: index
- Ge
- SelfLower
- Dot
- Ident: buffer
- Dot
- Ident: len
- Newline
- Indent
- Return
- "Null"
- Newline
- Dedent
- Pass
- Newline
- Dedent
- Export
- Func
- Bang
- Ident: Seq
- LBracket
- Ident: T
- RBracket
- Colon
- Colon
- Ident: push
- LParen
- Star
- Mut
- SelfLower
- Comma
- Ident: item
- Colon
- Ident: T
- RParen
- Arrow
- OkLiteral
- Newline
- Indent
- If
- SelfLower
- Dot
- Ident: buffer
- Dot
- Ident: len
- EqEq
- SelfLower
- Dot
- Ident: buffer
- Dot
- Ident: cap
- Newline
- Indent
- SelfLower
- Dot
- Ident: grow
- LParen
- RParen
- Newline
- Dedent
- Pass
- Newline
- Dedent
- Export
- Func
- Bang
- Ident: Seq
- LBracket
- Ident: T
- RBracket
- Colon
- Colon
- Ident: pop
- LParen
- Star
- Mut
- SelfLower
- RParen
- Arrow
- Question
- Ident: T
- Newline
- Indent
- If
- SelfLower
- Dot
- Ident: buffer
- Dot
- Ident: len
- EqEq
- IntegerLiteral:
    base: Decimal
    digits: "0"
    suffix: ~
- Newline
- Indent
- Return
- "Null"
- Newline
- Dedent
- SelfLower
- Dot
- Ident: buffer
- Dot
- Ident: len
- Eq
- SelfLower
- Dot
- Ident: buffer
- Dot
- Ident: len
- Minus
- IntegerLiteral:
    base: Decimal
    digits: "1"
    suffix: ~
- Newline
- Pass
- Newline
- Dedent
- Export
- Func
- Bang
- Ident: Seq
- LBracket
- Ident: T
- RBracket
- Colon
- Colon
- Ident: grow
- LParen
- Star
- Mut
- SelfLower
- RParen
- Arrow
- OkLiteral
- Newline
- Indent
- Let
- Ident: new_cap
- Eq
- SelfLower
- Dot
- Ident: buffer
- Dot
- Ident: cap
- Star
- Ident: Seq
- LBracket
- Ident: T
- RBracket
- Colon
- Colon
- Ident: GROW_FACTOR
- Newline
- Pass
- Newline
- Dedent
- Export
- Func
- Bang
- Ident: Seq
- LBracket
- Ident: T
- RBracket
- Colon
- Colon
- Ident: free
- LParen
- Star
- Mut
- SelfLower
- RParen
- Arrow
- OkLiteral
- Newline
- Indent
- Pass
- Newline
- Dedent
