crates/nyx-lexer/tests/snapshots/integration_tests__integration__stack.snap
---
source: crates/nyx-lexer/tests/integration_tests.rs
expression: tokens
---
- Newline
- Struct
- Ident: Stack
- LBracket
- Ident: T
- RBracket
- Newline
- Indent
- Ident: data
- Colon
- Star
- Mut
- Ident: T
- Newline
- Ident: len
- Colon
- USize
- Newline
- Ident: cap
- Colon
- USize
- Newline
- Dedent
- Const
- Ident: Stack
- LBracket
- Ident: T
- RBracket
- Colon
- Colon
- Ident: INITIAL_CAP
- Colon
- USize
- Eq
- IntegerLiteral:
    base: Decimal
    digits: "8"
    suffix: ~
- Newline
- Func
- Bang
- Ident: Stack
- LBracket
- Ident: T
- RBracket
- Colon
- Colon
- Ident: new
- LParen
- RParen
- Arrow
- Ident: Stack
- LBracket
- Ident: T
- RBracket
- Newline
- Indent
- Pass
- Newline
- Dedent
- Func
- Ident: Stack
- LBracket
- Ident: T
- RBracket
- Colon
- Colon
- Ident: is_empty
- LParen
- Star
- SelfLower
- RParen
- Arrow
- Bool
- Newline
- Indent
- Return
- SelfLower
- Dot
- Ident: len
- EqEq
- IntegerLiteral:
    base: Decimal
    digits: "0"
    suffix: ~
- Newline
- Dedent
- Func
- Ident: Stack
- LBracket
- Ident: T
- RBracket
- Colon
- Colon
- Ident: len
- LParen
- Star
- SelfLower
- RParen
- Arrow
- USize
- Newline
- Indent
- Return
- SelfLower
- Dot
- Ident: len
- Newline
- Dedent
- Func
- Bang
- Ident: Stack
- LBracket
- Ident: T
- RBracket
- Colon
- Colon
- Ident: push
- LParen
- Star
- Mut
- SelfLower
- Comma
- Ident: val
- Colon
- Ident: T
- RParen
- Arrow
- OkLiteral
- Newline
- Indent
- Pass
- Newline
- Dedent
- Func
- Bang
- Ident: Stack
- LBracket
- Ident: T
- RBracket
- Colon
- Colon
- Ident: pop
- LParen
- Star
- Mut
- SelfLower
- RParen
- Arrow
- Question
- Ident: T
- Newline
- Indent
- If
- SelfLower
- Dot
- Ident: is_empty
- LParen
- RParen
- Newline
- Indent
- Return
- "Null"
- Newline
- Dedent
- Pass
- Newline
- Dedent
- Func
- Ident: Stack
- LBracket
- Ident: T
- RBracket
- Colon
- Colon
- Ident: peek
- LParen
- Star
- SelfLower
- RParen
- Arrow
- Question
- Star
- Ident: T
- Newline
- Indent
- If
- SelfLower
- Dot
- Ident: is_empty
- LParen
- RParen
- Newline
- Indent
- Return
- "Null"
- Newline
- Dedent
- Pass
- Newline
- Dedent
- Func
- Bang
- Ident: Stack
- LBracket
- Ident: T
- RBracket
- Colon
- Colon
- Ident: free
- LParen
- Star
- Mut
- SelfLower
- RParen
- Arrow
- OkLiteral
- Newline
- Indent
- Pass
- Newline
- Dedent
